Added both papers

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
         <h1>
 <a id="conjecturing-for-sage" class="anchor" href="#conjecturing-for-sage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conjecturing for Sage</h1>
 
-<p>This repository contains the code described in the paper C. E. Larson and N. Van Cleemput, <a href="http://www.sciencedirect.com/science/article/pii/S0004370215001575">Automated Conjecturing I: Fajtlowicz's Dalmatian Heuristic Revisited</a>, Artificial Intelligence 231 (2016) 17-38.</p>
+<p>The code in this repository is described in the following papers:</p>
+
+<ul>
+    <li>C. E. Larson and N. Van Cleemput, <a href="http://www.sciencedirect.com/science/article/pii/S0004370215001575">Automated Conjecturing I: Fajtlowicz's Dalmatian Heuristic Revisited</a>, Artificial Intelligence 231, 2016, 17-38.</li>
+    <li>C. E. Larson and N. Van Cleemput, <a href="https://link.springer.com/article/10.1007%2Fs10472-017-9559-5">Automated Conjecturing III: Property-relations conjectures</a>, Annals of Mathematics and Artificial Intelligence 81 (3), 2017, 315-327.</li>
+</ul>
 
 <h2>
 <a id="quickstart" class="anchor" href="#quickstart" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quickstart</h2>
