--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
 
          <p></p>
 
+          <p class="view" style="margin-bottom: 0px"><a href="#installation">Installation</a></p>
+          <p class="view" style="margin-bottom: 0px; margin-left: 10px"><a href="#installing-in-sage">Installing in Sage</a></p>
+          <p class="view" style="margin-bottom: 0px; margin-left: 10px"><a href="#conjecturing-on-cocalc-">Conjecturing on CoCalc</a></p>
           <p class="view" style="margin-bottom: 0px"><a href="#quickstart">Quickstart</a></p>
           <p class="view" style="margin-bottom: 0px"><a href="#layout-of-the-repository">Layout of the repository</a></p>
           <p class="view" style="margin-bottom: 0px"><a href="#usage">Usage</a></p>
-          <p class="view" style="margin-bottom: 0px; margin-left: 10px"><a href="#installing-in-sage">Installing in Sage</a></p>
           <p class="view" style="margin-bottom: 0px; margin-left: 10px"><a href="#making-conjectures-in-sage">Making conjectures in Sage</a></p>
           <p class="view" style="margin-bottom: 0px; margin-left: 10px"><a href="#running-the-examples">Running the examples</a></p>
           <p class="view" style="margin-bottom: 0px; margin-left: 10px"><a href="#c-program">C program</a></p>
-          <p class="view" style="margin-bottom: 0px"><a href="#conjecturing-on-cocalc-">Conjecturing on CoCalc</a></p>
 
       </header>
       <section>
@@ -49,6 +50,53 @@
     <li>C. E. Larson and N. Van Cleemput, <a href="http://www.sciencedirect.com/science/article/pii/S0004370215001575">Automated Conjecturing I: Fajtlowicz's Dalmatian Heuristic Revisited</a>, Artificial Intelligence 231, 2016, 17-38.</li>
     <li>C. E. Larson and N. Van Cleemput, <a href="https://link.springer.com/article/10.1007%2Fs10472-017-9559-5">Automated Conjecturing III: Property-relations conjectures</a>, Annals of Mathematics and Artificial Intelligence 81 (3), 2017, 315-327.</li>
 </ul>
+
+<h2>
+<a id="installation" class="anchor" href="#quickstart" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
+
+<h3>
+<a id="installing-in-sage" class="anchor" href="#installing-in-sage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing in Sage</h3>
+
+<p>First you need to locate the Sage installation into which you want to install conjecturing. In case this is the system installation of Sage, you can find the location using the command <code>which sage</code>.</p>
+
+<ul>
+    <li>Download the archive <a href="https://github.com/nvcleemp/conjecturing/releases/download/0.12/spkg.zip">spkg.zip</a>, extract it and copy the directory <i>conjecturing</i> into the directory <i>SAGE_ROOT/build/pkgs</i>.</li>
+    <li>Download the archive <a href="https://github.com/nvcleemp/conjecturing/archive/0.12.tar.gz">conjecturing-0.12.tar.gz</a> and place the file into <i>SAGE_ROOT/upstream</i>.</li>
+    <li>Run the following command: <code>$ sage --package fix-checksum conjecturing</code><br>Make sure that you use the Sage installation into which you are installing.</li>
+    <li>Install the package using the following command: <code>$ sage -i conjecturing</code><br>Make sure that you use the Sage installation into which you are installing.</li>
+</ul>
+
+<h3>
+<a id="conjecturing-on-cocalc-" class="anchor" href="#conjecturing-on-cocalc-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conjecturing on CoCalc</h3>
+
+<p>One easy way to work with Sage is by going to <a href="http://www.cocalc.com">http://www.cocalc.com</a>. Of course you can use our code on CoCalc. By default, however, it is not possible to install additional packages there, so we created a separate release of the conjecturing package which can easily be used on CoCalc.</p>
+
+<ul>
+<li>Download the <a href="https://github.com/nvcleemp/conjecturing/archive/0.12-CoCalc.zip">0.12-CoCalc release</a>.</li>
+<li>Create a new project on CoCalc, and upload the zip file from the previous step to that project.</li>
+<li>Open a terminal on CoCalc and execute the following commands:</li>
+</ul>
+
+<pre><code>~$ unzip conjecturing-0.12-CoCalc
+~$ cd conjecturing-0.12-CoCalc
+~/conjecturing-0.12-CoCalc$ make
+</code></pre>
+
+<ul>
+<li>You are done. You can now start conjecturing using a Terminal or a Sage Worksheet. You can just follow the instructions above. In case you are bothered by the zip file and the directory 0.12-CoCalc, you can just remove them. Do not remove the files <code>expressions</code> and <code>conjecturing.py</code>.</li>
+</ul>
+
+<p>You can check that the installation was successful by creating a worksheet, copying the code below and executing it. If everything went OK, you should see some conjectures.</p>
+
+<pre><code>load('conjecturing.py')
+def max_degree(g):
+    return max(g.degree())
+invariants = [Graph.size, Graph.order, max_degree]
+objects = [graphs.CompleteGraph(n) for n in [3,4,5]]
+conjecture(objects, invariants, 0)
+</code></pre>
+
+<p>To update to a newer version, you just repeat the steps above for the newer zip file.</p>
 
 <h2>
 <a id="quickstart" class="anchor" href="#quickstart" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quickstart</h2>
@@ -97,19 +145,6 @@ sage: conjecture(objects, invariants, 1)
 
 <h2>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
-
-<h3>
-<a id="installing-in-sage" class="anchor" href="#installing-in-sage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing in Sage</h3>
-
-<p>First you need to locate the Sage installation into which you want to install conjecturing. In case this is the system installation of Sage, you can find the location using the command <code>which sage</code>.</p>
-
-<ul>
-    <li>Download the archive <a href="https://github.com/nvcleemp/conjecturing/releases/download/0.12/spkg.zip">spkg.zip</a>, extract it and copy the directory <i>conjecturing</i> into the directory <i>SAGE_ROOT/build/pkgs</i>.</li>
-    <li>Download the archive <a href="https://github.com/nvcleemp/conjecturing/archive/0.12.tar.gz">conjecturing-0.12.tar.gz</a> and place the file into <i>SAGE_ROOT/upstream</i>.</li>
-    <li>Run the following command: <code>$ sage --package fix-checksum conjecturing</code><br>Make sure that you use the Sage installation into which you are installing.</li>
-    <li>Install the package using the following command: <code>$ sage -i conjecturing</code><br>Make sure that you use the Sage installation into which you are installing.</li>
-</ul>
-<p></p>
 
 <h3>
 <a id="making-conjectures-in-sage" class="anchor" href="#making-conjectures-in-sage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Making conjectures in Sage</h3>
@@ -290,38 +325,6 @@ I2 &lt;= (I1) * 2
 I2 &lt;= ((I1) / 2) * (I3)
 I2 &lt;= ((I3) ^ 2) + 1
 </code></pre>
-
-<h2>
-<a id="conjecturing-on-cocalc-" class="anchor" href="#conjecturing-on-cocalc-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conjecturing on CoCalc</h2>
-
-<p>One easy way to work with Sage is by going to <a href="http://www.cocalc.com">http://www.cocalc.com</a>. Of course you can use our code on CoCalc. By default, however, it is not possible to install additional packages there, so we created a separate release of the conjecturing package which can easily be used on CoCalc.</p>
-
-<ul>
-<li>Download the <a href="https://github.com/nvcleemp/conjecturing/archive/0.12-CoCalc.zip">0.12-CoCalc release</a>.</li>
-<li>Create a new project on CoCalc, and upload the zip file from the previous step to that project.</li>
-<li>Open a terminal on CoCalc and execute the following commands:</li>
-</ul>
-
-<pre><code>~$ unzip conjecturing-0.12-CoCalc
-~$ cd conjecturing-0.12-CoCalc
-~/conjecturing-0.12-CoCalc$ make
-</code></pre>
-
-<ul>
-<li>You are done. You can now start conjecturing using a Terminal or a Sage Worksheet. You can just follow the instructions above. In case you are bothered by the zip file and the directory 0.12-CoCalc, you can just remove them. Do not remove the files <code>expressions</code> and <code>conjecturing.py</code>.</li>
-</ul>
-
-<p>You can check that the installation was successful by creating a worksheet, copying the code below and executing it. If everything went OK, you should see some conjectures.</p>
-
-<pre><code>load('conjecturing.py')
-def max_degree(g):
-    return max(g.degree())
-invariants = [Graph.size, Graph.order, max_degree]
-objects = [graphs.CompleteGraph(n) for n in [3,4,5]]
-conjecture(objects, invariants, 0)
-</code></pre>
-
-<p>To update to a newer version, you just repeat the steps above for the newer zip file.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nvcleemp">nvcleemp</a></p>
