Installation in Sage is currently broken.
See #16

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 <h3>
 <a id="installing-in-sage" class="anchor" href="#installing-in-sage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing in Sage</h3>
 
+<p style="background-color: #ff9999; color: #000000">Warning: in recent versions of Sage this approach to install conjecturing appears to be broken. We are looking into the issue, but as long as this is not fixed, you can best use <a href="#no-installation">conjecturing without installation</a>.</p>
+
 <p>First you need to locate the Sage installation into which you want to install conjecturing. In case this is the system installation of Sage, you can find the location using the command <code>which sage</code>.</p>
 
 <ul>
