Added more examples of papers

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
     <li>C. E. Larson and N. Van Cleemput, <a href="https://link.springer.com/article/10.1007%2Fs10472-017-9559-5">Automated Conjecturing III: Property-relations conjectures</a>, Annals of Mathematics and Artificial Intelligence 81 (3), 2017, 315-327.</li>
 </ul>
 
+<p>Examples of how the program can be used are given in:</p>
+
+<ul>
+    <li>A. Bradford, J. K. Day, L. Hutchinson, B. Kaperick, C. E. Larson, M. Mills, D. Muncy, N. Van Cleemput, <a href="https://www.jair.org/index.php/jair/article/view/12188">Automated Conjecturing II: Chomp and Reasoned Game Play</a>, Journal of Artificial Intelligence Research (JAIR) 68, 2020, pp. 447-461.</li>
+    <li>L. Hutchinson, V. Kamat, C. E. Larson, S. Mehta, D. Muncy, N. Van Cleemput, <a href="http://match.pmf.kg.ac.rs/electronic_versions/Match80/n3/match80n3_821-834.pdf">Automated Conjecturing VI: Domination Number of Benzenoids</a>, MATCH Commun. Math. Comput. Chem., 80(3), 2018, pp. 821-834.</li>
+</ul>
+  
 <h2>
 <a id="installation" class="anchor" href="#quickstart" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
